<resources>
    <string name="app_name">LinePlusNotepad</string>
    <string name="desc_add_memo_btn">메모 추가 버튼</string>
    <string name="desc_delete_memo_btn">메모 삭제 버튼</string>
    <string name="desc_memo_item_image">메모 아이템 이미지</string>
    <string name="desc_back_btn">뒤로가기 버튼</string>
    <string name="hint_input_title">제목</string>
    <string name="hint_input_content">내용</string>
    <string name="hint_input_url">이미지 URL</string>
    <string name="desc_show_image">저장된 이미지</string>

    <string name="cancel">취소</string>
    <string name="back">뒤로</string>
    <string name="close">닫기</string>
    <string name="save">완료</string>
    <string name="select_memo">선택</string>
    <string name="delete_memo">삭제</string>
    <string name="delete_all_memo">모두 삭제</string>
    <string name="select_photo_off">선택</string>
    <string name="select_photo_on">취소</string>
    <string name="delete_photo">삭제</string>
    <string name="add_photo_take_picture">사진 찍기</string>
    <string name="add_photo_from_album">사진 보관함</string>
    <string name="add_photo_input_url">URL 입력</string>
    <string name="input">입력</string>
</resources>
