<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_constLayout_top"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorDarkGray"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@id/main_constLayout_center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ToggleButton
            android:id="@+id/main_tgl_selectMemo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorTransparent"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingStart="@dimen/txt_btn_frame_padding_left"
            android:paddingTop="@dimen/txt_btn_frame_padding_top"
            android:paddingEnd="@dimen/txt_btn_frame_padding_right"
            android:paddingBottom="@dimen/txt_btn_frame_padding_bottom"
            android:textColor="@color/colorGreen"
            android:textOff="@string/select_memo"
            android:textOn="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_constLayout_center"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorDarkGray"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@id/main_constLayout_bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_constLayout_top">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/main_recy_memoList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorDarkGray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_constLayout_bottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorDarkGray"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_constLayout_center">

        <TextView
            android:id="@+id/main_txt_memoCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/main_txt_deleteMemoCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/main_imgBtn_addMemo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorTransparent"
            android:contentDescription="@string/desc_add_memo_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_btn_add_note" />

        <Button
            android:id="@+id/main_btn_deleteMemo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_all_memo"
            android:textColor="@color/colorGreen"
            android:background="@color/colorTransparent"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:paddingStart="@dimen/txt_btn_frame_padding_left"
            android:paddingTop="@dimen/txt_btn_frame_padding_top"
            android:paddingEnd="@dimen/txt_btn_frame_padding_right"
            android:paddingBottom="@dimen/txt_btn_frame_padding_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>