<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTransparent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/photo_constLayout_transparent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorTransparent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/photo_constLayout_untransparent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/bg_round">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/photo_constLayout_top"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/photo_recy_photoList"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/photo_imgBnt_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorTransparent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_btn_add_photo" />

            <Button
                android:id="@+id/photo_btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorTransparent"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:paddingStart="@dimen/txt_btn_frame_padding_left"
                android:paddingTop="@dimen/txt_btn_frame_padding_top"
                android:paddingEnd="@dimen/txt_btn_frame_padding_right"
                android:paddingBottom="@dimen/txt_btn_frame_padding_bottom"
                android:text="@string/delete_photo"
                android:textColor="@color/colorGreen"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/photo_tgl_select"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ToggleButton
                android:id="@+id/photo_tgl_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorTransparent"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:paddingStart="@dimen/txt_btn_frame_padding_left"
                android:paddingTop="@dimen/txt_btn_frame_padding_top"
                android:paddingEnd="@dimen/txt_btn_frame_padding_right"
                android:paddingBottom="@dimen/txt_btn_frame_padding_bottom"
                android:textColor="@color/colorGreen"
                android:textOff="@string/select_photo_off"
                android:textOn="@string/select_photo_on"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/photo_recy_photoList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/photo_constLayout_top" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>